Fix button not displaying correctly on iOS Safari

--- a/_sass/_contact-me.scss
+++ b/_sass/_contact-me.scss
@@ -84,6 +84,10 @@
     color: #fff;
 
     background-color: #408dff;
+
+    -webkit-appearance: none;
+    -moz-appearance: none;
+    appearance: none;
 }
 
 @media (min-width: 400px) {
